fix scope in pipeline

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -21,10 +21,12 @@ jobs:
           # === GITHUB ===
           registry-url: 'https://npm.pkg.github.com'
           # Defaults to the user or organization that owns the workflow file
-          scope: '@raphaeljoie'
+          scope: ${{ env.GITHUB_REPOSITORY_OWNER }}
 
-      - name: Repliace ${VERSION} in package.json with the tag version
+      - name: Replace ${VERSION} in package.json with the tag version
         run: VERSION=${GITHUB_REF#refs/tags/v} && sed -i -- "s/\${VERSION}/$VERSION/g" ./package.json
+      - name: Replace ${SCOPE} in package.json with the repo owner + "/"
+        run: SCOPE="${GITHUB_REPOSITORY_OWNER}/" && sed -i -- "s/\${SCOPE}/$SCOPE/g" ./package.json
       - run: npm ci
       - run: npm run build --if-present
       - run: npm publish
