--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -26,7 +26,7 @@ jobs:
       - name: Replace ${VERSION} in package.json with the tag version
         run: VERSION=${GITHUB_REF#refs/tags/v} && sed -i -- "s/\${VERSION}/$VERSION/g" ./package.json
       - name: Replace ${SCOPE} in package.json with the repo owner + "/"
-        run: SCOPE="${GITHUB_REPOSITORY_OWNER}/" && sed -i -- "s/\${SCOPE}/$SCOPE/g" ./package.json
+        run: echo $GITHUB_REPOSITORY_OWNER && SCOPE=$GITHUB_REPOSITORY_OWNER/ && echo $SCOPE && sed -i -- "s/\${SCOPE}/$SCOPE/g" ./package.json
       - run: npm ci
       - run: npm run build --if-present
       - run: npm publish
