--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -21,9 +21,10 @@ jobs:
           # === GITHUB ===
           registry-url: 'https://npm.pkg.github.com'
           # Defaults to the user or organization that owns the workflow file
-          scope: '@${{ env.GITHUB_REPOSITORY_OWNER }}'
+          scope: '@${{ env.SCOPE }}'
+        env:
+          SCOPE: '@${{ env.GITHUB_REPOSITORY_OWNER }}'
 
-      - run: echo $NPM_CONFIG_USERCONFIG
       - run: cat $NPM_CONFIG_USERCONFIG
       - name: Replace ${VERSION} in package.json with the tag version
         run: VERSION=${GITHUB_REF#refs/tags/v} && sed -i -- "s/\${VERSION}/$VERSION/g" ./package.json
