--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -21,9 +21,7 @@ jobs:
           # === GITHUB ===
           registry-url: 'https://npm.pkg.github.com'
           # Defaults to the user or organization that owns the workflow file
-          scope: '@${{ env.SCOPE }}'
-        env:
-          SCOPE: '@${{ env.GITHUB_REPOSITORY_OWNER }}'
+          scope: '@${{ github.repository_owner }}'
 
       - run: cat $NPM_CONFIG_USERCONFIG
       - name: Replace ${VERSION} in package.json with the tag version
