--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "${VERSION}",
   "description": "Input, but in wrap mode",
   "scripts": {
-    "build": "rollup -c"
+    "build": "rollup -c",
+    "test": "jest"
   },
   "author": "Raphaël Joie",
   "license": "MIT",
@@ -17,19 +18,25 @@
     "react": ">=16.3"
   },
   "devDependencies": {
+    "@babel/core": "^7.18.6",
     "@babel/preset-env": "^7.18.6",
     "@babel/preset-react": "^7.18.6",
     "@rollup/plugin-babel": "^5.3.1",
     "@rollup/plugin-commonjs": "^22.0.1",
     "@rollup/plugin-node-resolve": "^13.3.0",
+    "@testing-library/react": "^13.3.0",
     "@types/react": "^18.0.14",
     "autoprefixer": "^10.4.7",
+    "babel-jest": "^28.1.2",
     "eslint": "^8.18.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-jsx-a11y": "^6.6.0",
     "eslint-plugin-react": "^7.30.1",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^28.1.2",
+    "jest-environment-jsdom": "^28.1.2",
     "react": "^18.2.0",
     "rollup": "^2.75.7",
     "rollup-plugin-peer-deps-external": "^2.2.4",
